# Twogele-Boda

./: .gitignore  KAGGLE_WRITEUP.md  README.md
stitch_twogeleboda_smart_rider_assistant/twogele_boda_ai_smart_rider_portal_with_visual_footer/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_emergency_dispatch_hub/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_financial_insights/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_landing_page_with_safety_pricing/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_login/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_portal_settings/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_sign_up/: code.html
stitch_twogeleboda_smart_rider_assistant/twogele_boda_wealth_planner_saccos/: code.html
stitch_twogeleboda_smart_rider_assistant/warm_urban_transit/: DESIGN.md
twogele-boda-backend/: .env.example  README.md  RENDER.md  pyproject.toml  render.yaml  requirements.txt  server.py
twogele-boda-backend/agent/: model_engine.py  twogele_prompt.py
twogele-boda-backend/db/: __init__.py  models.py  repository.py
twogele-boda-backend/tests/: run_prompt_tests.py  test_cases.py
twogele-boda-frontend/: .env.example  README.md  VERCEL.md  index.html  package-lock.json  package.json
twogele-boda-frontend/src/: App.css  App.jsx  index.css
twogele-boda-frontend/src/components/: AuthGate.jsx  BrandLogo.jsx  Icon.jsx  Layout.jsx  MapView.jsx
twogele-boda-frontend/src/hooks/: useVoiceRecorder.js
(+16 files in other folders)
