[project]
name = "twogele-boda-backend"
version = "0.1.0"
description = "Gemma 4 FastAPI backend for Twogele Boda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]
